Feat: Añadir recursos y modelos de gestión empresarial
- Se han creado los modelos Bussines, BussinesSocial y WorkTeam con relaciones.
- Se han implementado recursos Filament para gestionar empresas, enlaces a redes sociales y equipos de trabajo, incluyendo formularios y tablas para operaciones CRUD.
- Se han añadido archivos de migración para las nuevas tablas de la base de datos.
- Se ha actualizado Filament AdminPanelProvider para establecer el modo de tema predeterminado.
- Se han realizado pequeños ajustes en CSS y vistas para mejorar la presentación.

--- a/public/web/css/ignore_for_wp.css
+++ b/public/web/css/ignore_for_wp.css
@@ -7,7 +7,7 @@
     background: url(../images/bg/2.png) no-repeat center center;
 }
 .aboutSection{
-    background: url(../images/bg/20.jpg) no-repeat right top #fafafa;
+    background:  #fafafa;
     padding: 139px 0 154px;
 }
 .mb43{
