--- a/public/web/css/theme.css
+++ b/public/web/css/theme.css
@@ -3350,7 +3350,7 @@
     bottom: 0;
     width: 100%;
     height: 100%;
-    background: url(../images/bg/18.png) no-repeat center bottom;
+    /* background: url(../images/bg/18.png) no-repeat center bottom; */
 }
 .stContent{
     position: absolute;
